# ascii-art-generator

./: .gitignore  LICENSE  README.md  pyproject.toml
ascii_art/: __main__.py  braille_converter.py  character_ramp.py  cli.py  color.py  console_log_converter.py  converter.py  image_source.py
